# rviz_voxelgrid_visuals

./: .gitignore  README.md
rviz_voxelgrid_visuals/: CMakeLists.txt  example_voxelgrid.rviz  package.xml  plugin_description.xml  setup.py  shape_completion.rviz
rviz_voxelgrid_visuals/examples/: mug_voxelgrid.pkl
rviz_voxelgrid_visuals/include/rviz_voxelgrid_visuals/: conversions.h  voxel_display.h  voxel_visual.h
rviz_voxelgrid_visuals/launch/: cubelist_republisher.launch
rviz_voxelgrid_visuals/scripts/: cubelist_republisher_node.py  quick_publish_demo.py
rviz_voxelgrid_visuals/src/: conversions.cpp  voxel_display.cpp  voxel_display.h  voxel_visual.cpp  voxel_visual.h
rviz_voxelgrid_visuals/src/mps_shape_completion_visualization/: __init__.py  conversions.py  quick_publish.py
rviz_voxelgrid_visuals/src/rviz_voxelgrid_visuals/: conversions.py  quick_publish.py
rviz_voxelgrid_visuals/test/: test_conversions.py
rviz_voxelgrid_visuals_msgs/: CMakeLists.txt  package.xml
rviz_voxelgrid_visuals_msgs/msg/: OccupancyStamped.msg  SparseVoxel.msg  SparseVoxelgridStamped.msg  VoxelgridStamped.msg
